@@ -59,10 +59,13 @@
    <table border="1">
     <tr><th>Shortcut</th><th>Description</th></tr>
     <tr><td>L</td><td>Hide/show the folder pane</td></tr>
-    <tr><td>Ctrl-Esc</td><td>Focus the folder pane</td></tr>
-    <tr><td>Alt-Esc</td><td>Focus the message pane</td></tr>
-    <tr><td>double Esc</td><td>Focus the thread pane</td></tr>
+    <tr><td>Esc-F</td><td>Focus the folder pane</td></tr>
+    <tr><td>Esc-M</td><td>Focus the message pane</td></tr>
+    <tr><td>Esc-Esc</td><td>Focus the thread pane</td></tr>
    </table>
+
+   <p>The Esc-X shortcuts means: press and release Escape, and then
+   press X within 300ms (Esc-Esc is thus like a double click on Escape).</p>
 
    <p>
    When the thread pane is focused, you can scroll the currently
